<?xml version="1.0" encoding="utf-8"?>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="?attr/backgroundMain"
    android:layout_height="match_parent">

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="0dp"
    android:elevation="0dp"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBarId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        android:elevation="0dp"
        android:background="?attr/backgroundMain"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backBt"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:src="@drawable/back_arrow" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
android:layout_width="match_parent"
android:layout_height="wrap_content"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="?attr/backgroundMain"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_115sdp"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bhosdiek" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="Developed by"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="Naman Dureja"
            android:textColor="#5FC5BA"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="Designed by"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="Ishaan Das"
            android:textColor="#5FC5BA"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/regular"
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:text="@string/about"
        android:textColor="?attr/PrimaryText"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/bold"
        android:text="Data Sources"
        android:textColor="#5FC5BA"
        android:textSize="@dimen/_26sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
     >

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="News"
            android:textColor="#5FC5BA"
            android:textSize="@dimen/_16sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/news_info"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:id="@+id/guardian"
            android:text="@string/theguardian_com"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="Statistics"
            android:textColor="#5FC5BA"
            android:textSize="@dimen/_16sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/statistics_info"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/who_int"
            android:id="@+id/who"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:id="@+id/jhu"
            android:text="@string/coronavirus_jhu_edu"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:id="@+id/covid19"
            android:fontFamily="@font/medium"
            android:text="@string/covid19india_org"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:id="@+id/worldometer"
            android:fontFamily="@font/medium"
            android:text="@string/worldometers_info_coronavirus"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:text="Try our Web App"
            android:textColor="#5FC5BA"
            android:textSize="@dimen/_16sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:id="@+id/webapp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:fontFamily="@font/medium"
            android:text="@string/sehat_tracker_herokuapp_com"
            android:textColor="?attr/PrimaryText"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>
        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
